Improve the FramerAPI resolve() method (#47)
* Improve the FramerAPI resolve() method

When provided a type hint we no longer fallback to looking up any type.
This previously would result in a namespace being returned when
expecting a function. Instead we're more lenient about the different
types we support, for example, we will now return a MethodSignature type
when passing the Method type hint. This means in most cases the function
should return the object you were expecting.

The verify-api-references command has also had an overhaul, it will
now print out the names of the models that are missing rather than
just the filename and count.

* Update fixture tests with latest api-extractor

--- a/pages/motion/motionvalue.mdx
+++ b/pages/motion/motionvalue.mdx
@@ -178,10 +178,10 @@ These child components can be used exactly like the parents. They can be passed 
 
 A `MotionValue` has the following methods, with which you can query use to affect its state.
 
-<APIFunction name="MotionValue.get()" />
-<APIFunction name="MotionValue.getVelocity()" />
-<APIFunction name="MotionValue.set()" />
-<APIFunction name="MotionValue.isAnimating()" />
-<APIFunction name="MotionValue.stop()" />
-<APIFunction name="MotionValue.onChange()" />
-<APIFunction name="MotionValue.destroy()" />
+<APIMethod name="MotionValue.get()" />
+<APIMethod name="MotionValue.getVelocity()" />
+<APIMethod name="MotionValue.set()" />
+<APIMethod name="MotionValue.isAnimating()" />
+<APIMethod name="MotionValue.stop()" />
+<APIMethod name="MotionValue.onChange()" />
+<APIMethod name="MotionValue.destroy()" />
