New Motion and Library content (#51)
* New motion content

* Adding SVG gradient animation

--- a/pages/animate-presence.mdx
+++ b/pages/animate-presence.mdx
@@ -233,4 +233,5 @@ export function Item(props) {
 
 <APIProperty name="AnimatePresenceProps.initial" />
 <APIProperty name="AnimatePresenceProps.custom" />
+<APIProperty name="AnimatePresenceProps.exitBeforeEnter" />
 <APIProperty name="AnimatePresenceProps.onExitComplete" />
