--- a/pages/animation.mdx
+++ b/pages/animation.mdx
@@ -70,6 +70,9 @@ Most animations are controlled via the `Frame` component, where you can set anim
 - <Ref name="AnimationProps.variants">variants</Ref>
 - <Ref name="MotionProps.initial">initial</Ref>
 - <Ref name="MotionCallbacks.onUpdate">onUpdate</Ref>
+- <Ref name="MotionCallbacks.onAnimationStart">
+    onAnimationStart
+  </Ref>
 - <Ref name="MotionCallbacks.onAnimationComplete">
     onAnimationComplete
   </Ref>
