--- a/pages/frame.mdx
+++ b/pages/frame.mdx
@@ -256,6 +256,7 @@ The following are properties accepted by the `Frame` component for animation, in
 <APIProperty name="AnimationProps.positionTransition" />
 
 <APIFunction name="MotionCallbacks.onUpdate()" />
+<APIFunction name="MotionCallbacks.onAnimationStart()" />
 <APIFunction name="MotionCallbacks.onAnimationComplete()" />
 
 ## Transition
