--- a/pages/motion/animate-presence.mdx
+++ b/pages/motion/animate-presence.mdx
@@ -211,4 +211,5 @@ export const MyComponent = ({ items }) => (
 
 <APIProperty name="AnimatePresenceProps.initial" />
 <APIProperty name="AnimatePresenceProps.custom" />
+<APIProperty name="AnimatePresenceProps.exitBeforeEnter" />
 <APIProperty name="AnimatePresenceProps.onExitComplete" />
