--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -289,6 +289,7 @@ The following SVG values are not currently compatible with server-side rendering
 <APIFunction name="MotionProps.transformTemplate()" />
 
 <APIFunction name="MotionCallbacks.onUpdate()" />
+<APIFunction name="MotionCallbacks.onAnimationStart()" />
 <APIFunction name="MotionCallbacks.onAnimationComplete()" />
 
 <APIProperty name="HoverHandlers.whileHover" />
