--- a/pages/motion/examples.mdx
+++ b/pages/motion/examples.mdx
@@ -368,3 +368,25 @@ export const List = ({ items }) =>
 ```
 
 ---
+
+## More
+
+### UI patterns
+
+- [Accordion](https://codesandbox.io/s/framer-motion-accordion-qx958)
+- [Drag and drop list reordering](https://codesandbox.io/s/framer-motion-drag-to-reorder-pkm1k)
+- [Image slideshow](https://codesandbox.io/s/framer-motion-image-gallery-pqvx3)
+- [Notifications](https://codesandbox.io/s/framer-motion-notifications-5cvo9)
+
+### Techniques
+
+- [Directional stagger](https://codesandbox.io/s/framer-motion-directional-stagger-effect-grid-f127v)
+- [Imperative animations](https://codesandbox.io/s/framer-motion-spring-powered-characters-remaining-count-i1wgk)
+- [SVG filter](https://codesandbox.io/s/framer-motion-animated-duotone-o778w)
+- [SVG gradient](https://codesandbox.io/s/elastic-worker-z02ye)
+- [SVG path](https://codesandbox.io/s/framer-motion-svg-checkbox-kqm7y)
+
+### Third-party libraries
+
+- [React Router](https://codesandbox.io/s/framer-motion-x-react-router-n7qhp)
+- [Styled Components](https://codesandbox.io/s/framer-motion-simple-animation-o32p0?fontsize=14&module=%2Fsrc%2FExample.tsx)
