--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -278,10 +278,10 @@ The following SVG values are not currently compatible with server-side rendering
 
 `motion` components accept the following props:
 
-<APIProperty name="MotionProps.initial" />
 <APIProperty name="MotionProps.style" />
-
+<APIProperty name="MotionProps.initial" />
 <APIProperty name="AnimationProps.animate" />
+<APIProperty name="AnimationProps.exit" />
 <APIProperty name="AnimationProps.transition" />
 <APIProperty name="AnimationProps.variants" />
 <APIProperty name="AnimationProps.positionTransition" />
