--- a/pages/motion/motionvalue.mdx
+++ b/pages/motion/motionvalue.mdx
@@ -174,6 +174,12 @@ These child components can be used exactly like the parents. They can be passed 
 
 ---
 
+## useInvertedScale
+
+<APIFunction name="useInvertedScale()" />
+
+---
+
 ## MotionValue API
 
 A `MotionValue` has the following methods, with which you can query use to affect its state.
