--- a/pages/motion/examples.mdx
+++ b/pages/motion/examples.mdx
@@ -382,6 +382,7 @@ export const List = ({ items }) =>
 
 - [Directional stagger](https://codesandbox.io/s/framer-motion-directional-stagger-effect-grid-f127v)
 - [Imperative animations](https://codesandbox.io/s/framer-motion-spring-powered-characters-remaining-count-i1wgk)
+- [Parallax](https://codesandbox.io/s/framer-motion-parallax-osm5p)
 - [SVG filter](https://codesandbox.io/s/framer-motion-animated-duotone-o778w)
 - [SVG gradient](https://codesandbox.io/s/elastic-worker-z02ye)
 - [SVG path](https://codesandbox.io/s/framer-motion-svg-checkbox-kqm7y)
