--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -285,6 +285,7 @@ The following SVG values are not currently compatible with server-side rendering
 <APIProperty name="AnimationProps.transition" />
 <APIProperty name="AnimationProps.variants" />
 <APIProperty name="AnimationProps.positionTransition" />
+<APIProperty name="AnimationProps.layoutTransition" />
 <APIProperty name="MotionAdvancedProps.custom" />
 <APIFunction name="MotionProps.transformTemplate()" />
 
