--- a/pages/motion/examples.mdx
+++ b/pages/motion/examples.mdx
@@ -374,6 +374,7 @@ export const List = ({ items }) =>
 ### UI patterns
 
 - [Accordion](https://codesandbox.io/s/framer-motion-accordion-qx958)
+- [App Store-style card expansion](https://codesandbox.io/s/app-store-ui-using-react-and-framer-motion-ecgc2)
 - [Drag and drop list reordering](https://codesandbox.io/s/framer-motion-drag-to-reorder-pkm1k)
 - [Image slideshow](https://codesandbox.io/s/framer-motion-image-gallery-pqvx3)
 - [Notifications](https://codesandbox.io/s/framer-motion-notifications-5cvo9)
