Differentiate Library and Motion (#61)
* Add variables for the accent color
* Add dynamic accent colors to “API” and “404”
* Add animation to “404”
* Add a “404” for Motion as well
* Fix “404” redirect
* Update API switch
* Hide Edit

--- a/pages/motion/examples.mdx
+++ b/pages/motion/examples.mdx
@@ -45,7 +45,7 @@ The animation used can be configured using the `transition` prop.
 
 </div>
 
-<EmbeddedExample background="#05f">
+<EmbeddedExample background="var(--accent)">
   <AnimationBasicExample />
 </EmbeddedExample>
 
@@ -77,7 +77,7 @@ By default, each keyframe will be spaced evenly throughout the animation, but th
 
 </div>
 
-<EmbeddedExample background="#05f">
+<EmbeddedExample background="var(--accent)">
   <AnimationKeyframesExample />
 </EmbeddedExample>
 
@@ -114,7 +114,7 @@ Variants can also be dynamic functions that return different props based on data
 
 </div>
 
-<EmbeddedExample background="#05f">
+<EmbeddedExample background="var(--accent)">
   <AnimationVariantsExample />
 </EmbeddedExample>
 
@@ -160,7 +160,7 @@ Motion will also automatically handle the interplay of the two gestures, so if a
 
 </div>
 
-<EmbeddedExample background="#05f">
+<EmbeddedExample background="var(--accent)">
   <GestureAnimationShortcuts />
 </EmbeddedExample>
 
@@ -194,7 +194,7 @@ These constraints are elastic, and the strength of this elasticity can be config
 
 </div>
 
-<EmbeddedExample background="#05f">
+<EmbeddedExample background="var(--accent)">
   <GestureDrag />
 </EmbeddedExample>
 
@@ -231,7 +231,7 @@ By making `MotionValue`s yourself, you can create declarative chains of values t
 
 </div>
 
-<EmbeddedExample background="#05f">
+<EmbeddedExample background="var(--accent)">
   <MotionValueSVG />
 </EmbeddedExample>
 
@@ -281,7 +281,7 @@ You can use these `MotionValue`s to declaratively drive features like progress i
 
 </div>
 
-<EmbeddedExample background="#05f">
+<EmbeddedExample background="var(--accent)">
   <ViewportScroll />
 </EmbeddedExample>
 
