Remove "size" usage in t example on Scroll page (#67)
Update the example as we moved `size` from ScrollProps and PageProps: https://github.com/framer/company/issues/12378

--- a/pages/scroll.mdx
+++ b/pages/scroll.mdx
@@ -37,7 +37,7 @@ import { Frame, Scroll } from "framer"
 
 export function MyComponent() {
   return (
-    <Scroll size={200}>
+    <Scroll height={200} width={200}>
       <Frame size={300}>Hello World!</Frame>
     </Scroll>
   )
