Adding inherit prop to docs (#70)
* Adding inherit prop to docs

* Changing inherit pointer

--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -284,6 +284,7 @@ The following SVG values are not currently compatible with server-side rendering
 <APIProperty name="AnimationProps.exit" />
 <APIProperty name="AnimationProps.transition" />
 <APIProperty name="AnimationProps.variants" />
+<APIProperty name="MotionAdvancedProps.inherit" />
 <APIProperty name="AnimationProps.positionTransition" />
 <APIProperty name="AnimationProps.layoutTransition" />
 <APIProperty name="MotionAdvancedProps.custom" />
