Upgrade non-secure HTTP URLs to HTTPS (#75)

--- a/pages/canvas-components.mdx
+++ b/pages/canvas-components.mdx
@@ -98,7 +98,7 @@ export function MyComponent() {
 
 <div>
 
-[Shared colors](http://framer.com/docs/shared-colors) from your Canvas can also be imported and used in Code. In this example, we’re importing a color that we’ve named `Primary` in the Color Picker, and we’re using it to set the background of a `Frame`. Please note that we manage the colors using CSS variables, so they can’t be transformed using the `Color()` function at the moment.
+[Shared colors](https://framer.com/docs/shared-colors) from your Canvas can also be imported and used in Code. In this example, we’re importing a color that we’ve named `Primary` in the Color Picker, and we’re using it to set the background of a `Frame`. Please note that we manage the colors using CSS variables, so they can’t be transformed using the `Color()` function at the moment.
 
 **Note**: For prototyping, using code-friendly names is encouraged, such as `accentColor`. If your shared color names do contain spaces, you can reference those by using the bracket notation: `colors["Accent Color"]`.
 
