--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -28,7 +28,7 @@ export default Template()
 
 ## Overview
 
-Framer provides helpers for advanced physics-based animation, complex touch-based gestures and common components for scrolling, paging and interface flows. It’s designed to allow beginners to explore digital product ideas without boundaries. It builds on the following technologies. To learn more about these, be sure to check out our <a href="http://bit.ly/framer-react" target="_blank">ES6 and React</a> Guide too.
+Framer provides helpers for advanced physics-based animation, complex touch-based gestures and common components for scrolling, paging and interface flows. It’s designed to allow beginners to explore digital product ideas without boundaries. It builds on the following technologies. To learn more about these, be sure to check out our <a href="https://bit.ly/framer-react" target="_blank">ES6 and React</a> Guide too.
 
 </div>
 
