--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -78,7 +78,7 @@ We’ve prepared starter files for CodeSandbox and Framer X with React and the F
 
 <Button
   name="Framer X Starter File"
-  link="http://static.framer.com/api/tutorial-start.framerx"
+  link="https://static.framer.com/api/tutorial-start.framerx"
 />
 
 <br /><br />
@@ -821,7 +821,7 @@ Below are completed tutorial files which may be helpful if you ran into any issu
 
 <Button
   name="Framer X Completed Tutorial"
-  link="http://static.framer.com/api/tutorial-complete.framerx"
+  link="https://static.framer.com/api/tutorial-complete.framerx"
 />
 </div>
 <div>
