Fix typo in motion/animation.mdx (#78)
The variant points to item while the variable is called items.

--- a/pages/motion/animation.mdx
+++ b/pages/motion/animation.mdx
@@ -173,7 +173,7 @@ const list = {
   hidden: { opacity: 0 },
 }
 
-const items = {
+const item = {
   visible: { opacity: 1, x: 0 },
   hidden: { opacity: 0, x: -100 },
 }
