Changed 'an' to 'a' in gestures.tsx (#69)

--- a/pages/motion/gestures.mdx
+++ b/pages/motion/gestures.mdx
@@ -126,7 +126,7 @@ It differs from `onMouseEnter` and `onMouseLeave` in that hover is guaranteed to
 
 The tap gesture detects when a pointer presses down and releases on the same component.
 
-It fires an `tap` event when tapping successfully completes on an component, and a `tapCancel` event when tapping ends outside the component.
+It fires a `tap` event when tapping successfully completes on an component, and a `tapCancel` event when tapping ends outside the component.
 
 If the tappable component is a child of a draggable component, it'll automatically cancel the tap gesture if the pointer moves further than 3 pixels during the gesture.
 
