Fix typos in CONTRIBUTING.md and README.md (#73)

--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -315,7 +315,7 @@ The last element you need is the fill color that will follow the knob as you sli
 
 The fill should have a background color of white and a height and radius that matches the rail. For now, to see the fill, set its width to half of the rail width. This won’t look correct initially but you will fix this in the upcoming steps.
 
-Now that you have all the elements of a slider, its time to add dragging to the knob and get the fill working properly.
+Now that you have all the elements of a slider, it's time to add dragging to the knob and get the fill working properly.
 
 </div>
 
@@ -714,7 +714,7 @@ To create the mask, you’ll add a `Frame` that wraps around the existing profil
 
 The mask `Frame` is a 120px circle that is centered but offset on the `y` axis by -100px. This moves the mask `Frame` away from the `Slider`. To mask the image `Frame`, set the `overflow` property to `"hidden"` to ensure the image is hidden outside of the circle mask `Frame`.
 
-This will mask your image but, when its scaled you will only be able to view the center of the image. Let’s change this so you can view any area of the image at any scale.
+This will mask your image but, when it's scaled you will only be able to view the center of the image. Let’s change this so you can view any area of the image at any scale.
 
 </div>
 
