--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -113,7 +113,7 @@ Transform properties are accelerated by the GPU, and therefore animate smoothly.
 ```jsx
 <motion.a
   whileHover={{ scale: 1.2 }}
-  whilePress={{ scale: 0.8 }}
+  whileTap={{ scale: 0.8 }}
   style={{ x: 100 }}
 />
 ```
