Add missing PageProperties fields (#84)

--- a/pages/page.mdx
+++ b/pages/page.mdx
@@ -51,14 +51,22 @@ export function MyComponent() {
 
 <APIProperty name="PageProperties.alignment" />
 <APIProperty name="PageProperties.animateCurrentPageUpdate" />
+<APIProperty name="PageProperties.contentHeight" />
+<APIProperty name="PageProperties.contentOffsetX" />
+<APIProperty name="PageProperties.contentOffsetY" />
 <APIProperty name="PageProperties.contentWidth" />
 <APIProperty name="PageProperties.currentPage" />
 <APIProperty name="PageProperties.defaultEffect" />
+<APIProperty name="PageProperties.direction" />
+<APIProperty name="PageProperties.directionLock" />
+<APIProperty name="PageProperties.dragEnabled" />
 <APIProperty name="PageProperties.gap" />
 <APIProperty name="PageProperties.momentum" />
+<APIProperty name="PageProperties.wheelEnabled" />
 
 ## Padding
 
+<APIProperty name="PageProperties.gap" />
 <APIProperty name="PageProperties.padding" />
 <APIProperty name="PageProperties.paddingTop" />
 <APIProperty name="PageProperties.paddingRight" />
