--- a/pages/motion/utilities.mdx
+++ b/pages/motion/utilities.mdx
@@ -31,3 +31,9 @@ export default Template("Utilities")
 ## useCycle
 
 <APIFunction name="useCycle" />
+
+---
+
+## useReducedMotion
+
+<APIFunction name="useReducedMotion()" />
