--- a/pages/examples.mdx
+++ b/pages/examples.mdx
@@ -17,7 +17,7 @@ export default Template("Examples")
 
 <div>
 
-The `Frame` is a basic container for layout, styling, animation and events. It’s essentially a `div` element with extra options and smart defaults. Here, you see how easy it is to add visual properties, like `background` and `radius`. Plus, we include shorthand properties that make it easier to quickly customize elements, like `size`, which sets both `width` and `height`.
+The `Frame` is a basic container for layout, styling, animation and events. It’s essentially a `div` element with extra options and smart defaults. Here, you can see how easy it is to add visual properties, like `background` and `radius`. Plus, we include shorthand properties that make it easier to quickly customize elements, like `size`, which sets both `width` and `height`.
 
 <Button
   name="Open Example"
@@ -406,7 +406,7 @@ export function MyComponent() {
 <div>
 
 Here, we’re using two custom Hooks in Framer to transform values from one range to another.
-The `useMotionValue` provides an animatable and sharable value, which we’ll use for the `x` position.
+The `useMotionValue` provides an animatable and shareable value, which we’ll use for the `x` position.
 Then, we’ll transform that value from a range of `[-200, 200]` to a range that makes sense for `scale`.
 Finally, we’ll apply both properties to the `Frame`.
 
