--- a/pages/frame.mdx
+++ b/pages/frame.mdx
@@ -264,7 +264,7 @@ The following are properties accepted by the `Frame` component for animation, in
 
 <div>
 
-The `transition` property can be used to customise animations directly on a `Frame`. A `transition` typically defines a single transition that applies to all animating values on that `Frame`. It’s possible to override this `transition` property if a transition is added to an object or `variants` label given to the `animate`, `hover` or `press` properties.
+The `transition` property can be used to customize animations directly on a `Frame`. A `transition` typically defines a single transition that applies to all animating values on that `Frame`. It’s possible to override this `transition` property if a transition is added to an object or `variants` label given to the `animate`, `hover` or `press` properties.
 
 </div>
 
@@ -293,7 +293,7 @@ const transition = {
 }
 ```
 
-You can add orchestration properties like `delay` to affect the whole animation. The numeric value represent seconds.
+You can add orchestration properties like `delay` to affect the whole animation. The numeric value represents seconds.
 
 ```jsx
 const transition = {
