--- a/pages/motion/animation.mdx
+++ b/pages/motion/animation.mdx
@@ -292,7 +292,7 @@ const sequence = async () => {
 
 ### Dynamic `start`
 
-`start` can also accept a function that can dynamically start each component the controls are bound to with a different animation definition.
+`start` can also accept a function that can dynamically start each component and the controls are bound to with a different animation definition.
 
 Custom data can be sent to this function via the component's `custom` prop.
 
