--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -124,7 +124,7 @@ Transform properties are accelerated by the GPU, and therefore animate smoothly.
 
 For convenience, transform values are applied in a specific order: translate, scale, rotate, skew.
 
-However, you can customise this default order using the [`transformTemplate` prop](#motionprops.transformtemplate).
+However, you can customize this default order using the [`transformTemplate` prop](#motionprops.transformtemplate).
 
 </div>
 
