Adding drag controls (#90)
* Adding functions

* Removing extra line

* Upgrading Framer Motion

--- a/pages/motion/gestures.mdx
+++ b/pages/motion/gestures.mdx
@@ -163,6 +163,7 @@ The drag gesture follows the rules of the pan gesture but applies pointer moveme
 <APIProperty name="DraggableProps.dragMomentum" />
 <APIProperty name="DraggableProps.dragTransition" />
 <APIProperty name="DraggableProps.dragPropagation" />
+<APIProperty name="DraggableProps.dragControls" />
 
 <APIMethod name="DragHandlers.onDrag()" />
 <APIMethod name="DragHandlers.onDragStart()" />
