--- a/pages/motion/utilities.mdx
+++ b/pages/motion/utilities.mdx
@@ -25,6 +25,7 @@ export default Template("Utilities")
 ## Transform
 
 <APIFunction name="(transform:1)" />
+<APIFunction name="(transform:2)" />
 
 ---
 
@@ -36,4 +37,10 @@ export default Template("Utilities")
 
 ## useReducedMotion
 
-<APIFunction name="useReducedMotion()" />
+<APIFunction name="useReducedMotion" />
+
+---
+
+## useDragControls
+
+<APIFunction name="useDragControls" />
